[gd_scene load_steps=19 format=3 uid="uid://l3hosi60w0je"]

[ext_resource type="Script" uid="uid://b714ipxrqtuo" path="res://scripts/ui/main_menu.gd" id="1_uhagc"]
[ext_resource type="Texture2D" uid="uid://oy46nu348o5f" path="res://assets/sprite/background/golfbg.png" id="2_btxxm"]
[ext_resource type="FontFile" uid="uid://cy1l7hojlslff" path="res://assets/text/ClimateCrisis-Regular-VariableFont_YEAR.ttf" id="3_btxxm"]
[ext_resource type="FontFile" uid="uid://idyueciqptox" path="res://assets/text/CherryBombOne-Regular.ttf" id="3_wb0q5"]
[ext_resource type="Script" uid="uid://cxo1d57uoeerm" path="res://scripts/ui/volume_slider.gd" id="4_q85j6"]
[ext_resource type="Script" uid="uid://bpte4tiv4qtdh" path="res://scripts/ui/fullscreen_checkbox.gd" id="5_8g5eo"]
[ext_resource type="AudioStream" uid="uid://dyakiqgs5ibv0" path="res://assets/music/Alkan - WWO.mp3" id="6_7suek"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r67kn"]
resource_local_to_scene = true
texture = ExtResource("2_btxxm")
modulate_color = Color(0.78916585, 0.9818757, 0.9818757, 1)

[sub_resource type="LabelSettings" id="LabelSettings_41gti"]
font = ExtResource("3_btxxm")
font_size = 45
font_color = Color(1, 0.13333333, 0, 1)
outline_size = 5
outline_color = Color(0.5, 0, 0, 1)
shadow_size = 15
shadow_color = Color(0.66292787, 0.29831758, 0, 0.2509804)
shadow_offset = Vector2(5, 5)

[sub_resource type="Theme" id="Theme_f54a5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yb1mt"]
bg_color = Color(0.5, 0.5, 0.5, 0)
border_width_left = 10
border_width_right = 10
border_color = Color(1, 0, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_41gti"]
bg_color = Color(0.5, 0.5, 0.5, 0.49803922)
border_width_left = 10
border_width_right = 10
border_color = Color(0.5, 0, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f54a5"]
bg_color = Color(0.5, 0.5, 0.5, 0.24705882)
border_width_left = 10
border_width_right = 10
border_color = Color(0.75, 0, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7e3k0"]
bg_color = Color(0.5, 0, 0, 1)
border_width_left = 10
border_width_right = 10
border_color = Color(0.5, 0, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_offset = Vector2(5, 5)

[sub_resource type="Theme" id="Theme_m41qk"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_disabled_color = Color(1, 1, 1, 1)
Button/colors/font_focus_color = Color(0.5, 0.5, 0.5, 1)
Button/colors/font_hover_color = Color(0.75, 0.75, 0.75, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(1, 0, 0, 1)
Button/colors/icon_disabled_color = Color(1, 1, 1, 0.4)
Button/colors/icon_focus_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_normal_color = Color(1, 1, 1, 1)
Button/colors/icon_pressed_color = Color(1, 1, 1, 1)
Button/constants/align_to_largest_stylebox = 0
Button/constants/h_separation = 4
Button/constants/icon_max_width = 0
Button/constants/outline_size = 5
Button/font_sizes/font_size = 30
Button/fonts/font = ExtResource("3_wb0q5")
Button/styles/disabled = SubResource("StyleBoxFlat_yb1mt")
Button/styles/disabled_mirrored = SubResource("StyleBoxFlat_yb1mt")
Button/styles/focus = SubResource("StyleBoxFlat_41gti")
Button/styles/hover = SubResource("StyleBoxFlat_f54a5")
Button/styles/hover_mirrored = SubResource("StyleBoxFlat_f54a5")
Button/styles/hover_pressed = SubResource("StyleBoxFlat_7e3k0")
Button/styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_7e3k0")
Button/styles/normal = SubResource("StyleBoxFlat_yb1mt")
Button/styles/normal_mirrored = SubResource("StyleBoxFlat_yb1mt")
Button/styles/pressed = SubResource("StyleBoxFlat_7e3k0")
Button/styles/pressed_mirrored = SubResource("StyleBoxFlat_7e3k0")

[sub_resource type="LabelSettings" id="LabelSettings_f54a5"]
font = ExtResource("3_wb0q5")
font_size = 30
font_color = Color(1, 0.13333333, 0, 1)
outline_size = 5
outline_color = Color(0.5, 0, 0, 1)
shadow_size = 15
shadow_color = Color(0.66292787, 0.29831758, 0, 0.2509804)
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_7e3k0"]
color = Color(0.5, 0, 0, 1)
thickness = 5

[sub_resource type="StyleBoxLine" id="StyleBoxLine_m41qk"]
color = Color(1, 0, 0, 1)
thickness = 5

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uhagc")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_r67kn")

[node name="TWHGGLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.016
anchor_top = 0.014
anchor_right = 0.469
anchor_bottom = 0.26200002
offset_left = -0.48000145
offset_top = -0.07999992
offset_right = -0.32000732
offset_bottom = 0.35998535
grow_vertical = 2
text = "THE WORLD'S HARDEST
GOLF GAME"
label_settings = SubResource("LabelSettings_41gti")
vertical_alignment = 1

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.703
anchor_top = 0.069000006
anchor_right = 0.96400005
anchor_bottom = 0.36600003
offset_left = 0.15997314
offset_top = 0.31999588
offset_right = -0.51208496
offset_bottom = -0.13604736
theme = SubResource("Theme_f54a5")
theme_override_constants/separation = 30
alignment = 1

[node name="PlayButton" type="Button" parent="MainButtons"]
layout_mode = 2
theme = SubResource("Theme_m41qk")
theme_override_constants/outline_size = 10
text = "PLAY"

[node name="OptionsButton" type="Button" parent="MainButtons"]
layout_mode = 2
theme = SubResource("Theme_m41qk")
theme_override_constants/outline_size = 10
text = "OPTIONS"

[node name="ExitButton" type="Button" parent="MainButtons"]
layout_mode = 2
theme = SubResource("Theme_m41qk")
theme_override_constants/outline_size = 10
text = "EXIT"

[node name="Options" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="OptionsLabel" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.055000003
anchor_top = 0.097
anchor_right = 0.22100002
anchor_bottom = 0.21900001
offset_left = -0.40000153
offset_top = 0.15999603
offset_right = 0.11999512
offset_bottom = 0.31999207
text = "Options"
label_settings = SubResource("LabelSettings_41gti")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VolumeLabel" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.56200004
anchor_top = 0.069000006
anchor_right = 0.68
anchor_bottom = 0.13900001
offset_left = 0.6399536
offset_top = 0.31999588
offset_right = -0.4000244
offset_bottom = -0.08000946
text = "Volume"
label_settings = SubResource("LabelSettings_f54a5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.703
anchor_top = 0.11100001
anchor_right = 0.93700004
anchor_bottom = 0.125
offset_left = 0.15997314
offset_top = -9.920006
offset_right = 0.6398926
theme_override_styles/slider = SubResource("StyleBoxLine_7e3k0")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_m41qk")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_m41qk")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("4_q85j6")
audio_bus_name = "Music"

[node name="FullscreenLabel" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.56200004
anchor_top = 0.208
anchor_right = 0.758
anchor_bottom = 0.27800003
offset_left = 0.6399536
offset_top = 0.23999023
offset_right = -0.23999023
offset_bottom = -0.16001892
text = "Fullscreen Mode"
label_settings = SubResource("LabelSettings_f54a5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FullscreenCheckbox" type="CheckBox" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.781
anchor_top = 0.208
anchor_right = 0.82000005
anchor_bottom = 0.27800003
offset_left = 0.3199463
offset_top = 0.23999023
offset_right = -24.600098
offset_bottom = -25.160019
scale = Vector2(2, 2)
button_pressed = true
alignment = 1
icon_alignment = 1
script = ExtResource("5_8g5eo")

[node name="BackButton" type="Button" parent="Options"]
layout_mode = 0
offset_left = 700.0
offset_top = 646.0
offset_right = 900.0
offset_bottom = 690.0
theme = SubResource("Theme_m41qk")
theme_override_constants/outline_size = 10
text = "BACK"

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_7suek")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="MainButtons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainButtons/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MainButtons/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="value_changed" from="Options/VolumeSlider" to="Options/VolumeSlider" method="_on_value_changed"]
[connection signal="toggled" from="Options/FullscreenCheckbox" to="Options/FullscreenCheckbox" method="_on_toggled"]
[connection signal="pressed" from="Options/BackButton" to="." method="_on_back_button_pressed"]
